# LibraryManagementSystem-Server

./: app.py  pyproject.toml
src/: .env  .gitignore
src/config/: config.py
src/controllers/: admincontroller.py  authcontroller.py  librariancontroller.py  patroncontroller.py
src/data/models/: Book.py  Patron.py  User.py  admin.py  book.py  book_reservation.py  borrowrecord.py  librarian.py  patron.py  user.py
src/data/repositories/: book_reservations.py  books.py  borrowrecords.py  test_book_reservations.py  test_books.py  test_borrowrecords.py  test_users.py  users.py
src/dtos/requests/: addbookrequest.py  adduserrequest.py  bookrequest.py  borrowBookRequest.py  deleteuserrequest.py  loginrequest.py
src/dtos/responses/: addbookresponse.py  adduserresponse.py  getbookresponse.py  getbooksresponse.py  loginresponse.py
src/exceptions/: apiresponseexception.py  bookalreadyexistexception.py  booknotavailableexception.py  invalidemailexception.py  invalidloginexception.py  invalidnameexception.py  invalidphonenumberexception.py  invalidquantityexception.py  invalidroleexception.py  unauthorizedaccessexception.py  unreturnedbookexception.py  useralreadyexistsexception.py  userdatabasetableexception.py
src/schemas/: create_db.py
src/services/: admin_services.py  auth_services.py  librarian_services.py  patron_services.py  test_auth_services.py  test_librarian_services.py  test_patron_services.py
src/utils/: api_call.py  errorhandler.py  getbookinfo.py  mapper.py  validator.py
