[project]
name = "librarymanagementsystem-server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "mysql-connector-python>=9.4.0",
    "mysqlclient>=2.2.7",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "werkzeug>=3.1.3",
]
